[package]
name = "epine"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
thiserror = "1.0"
flate2 = "1"
tar = "0.4"
tempfile = "3.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1", features = ["rt"] }

[dependencies.mlua]
version = "0.5"
features = ["lua53", "vendored", "serialize"]
