[package]
name = "epine"
version = "0.1.0-alpha4"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Makefile generator for the 21st century"
homepage = "https://nasso.dev/epine"
documentation = "https://nasso.dev/epine/api"
repository = "https://github.com/nasso/epine"
keywords = ["makefile", "generation", "lua"]
readme = "README.md"
exclude = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
thiserror = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
reqwest = "0.11"
directories = "3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }

[dependencies.mlua]
version = "0.5"
features = ["lua53", "vendored", "serialize"]
